--- a/Waiter’s_Tip_Prediction.ipynb
+++ b/Waiter’s_Tip_Prediction.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMXs/rmOJBJ7+7t5KTvPkE4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/kimannv42/Waiter-s-Tip-Prediction./blob/main/Waiter%E2%80%99s_Tip_Prediction.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -34,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": null,
       "metadata": {
         "id": "PlTGEaOzPM-C"
       },
@@ -80,7 +92,7 @@
         },
         "outputId": "cfab1285-4ae0-46e7-f8eb-e2248fa98709"
       },
-      "execution_count": 196,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +421,7 @@
         "id": "et235sZHR-K7",
         "outputId": "0de56043-3225-42fd-8e0c-8601c93f47e8"
       },
-      "execution_count": 197,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -444,7 +456,7 @@
         "id": "9nj4HEO0Skg2",
         "outputId": "4201ef3e-e1d5-4d1c-9add-4e3ba22c73f7"
       },
-      "execution_count": 198,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -481,7 +493,7 @@
         "id": "UCqKNy0SSyo6",
         "outputId": "2bdcce89-f7b6-40e8-eb8d-6e068917be72"
       },
-      "execution_count": 199,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +820,7 @@
         "id": "snJGBo69SOFv",
         "outputId": "d0123f86-827c-4d68-8fd5-4a7edb04f44f"
       },
-      "execution_count": 200,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -902,7 +914,7 @@
         "outputId": "fa6b8048-81cc-49d1-dbd2-8d504c3313ff",
         "collapsed": true
       },
-      "execution_count": 201,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -933,7 +945,7 @@
         "id": "Xx9CRh454s8x",
         "outputId": "7cd62b08-e6db-4b16-defa-7c6dd0f65943"
       },
-      "execution_count": 202,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -964,7 +976,7 @@
         "id": "LzRKLyqaC5iZ",
         "outputId": "6f4c0852-bb32-4027-ada8-9d96d19d2fe3"
       },
-      "execution_count": 203,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1006,7 +1018,7 @@
         "id": "HqG2mJPqFTnw",
         "outputId": "0f9b4bec-832e-462c-83fb-8d840d8ec816"
       },
-      "execution_count": 234,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1091,7 +1103,7 @@
         "id": "KAG7JgP9iMva",
         "outputId": "544d0a97-def3-41c9-8083-714323e775b1"
       },
-      "execution_count": 235,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1552,7 +1564,7 @@
         "id": "lpltcGd3xhEx",
         "outputId": "0afd7318-5e13-4332-e597-3a88740b8735"
       },
-      "execution_count": 238,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1582,7 +1594,7 @@
         "id": "2vRmdM0aTvaV",
         "outputId": "2a29cbd5-7575-40e0-b077-f9842a629e77"
       },
-      "execution_count": 239,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1608,7 +1620,7 @@
       "metadata": {
         "id": "b1Qc_2d5TzCu"
       },
-      "execution_count": 243,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1655,7 +1667,7 @@
         "id": "srq9SY6GRLt2",
         "outputId": "8c5949f3-7a3e-4607-8039-2bffcf3c4961"
       },
-      "execution_count": 247,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
